--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
         .widget {
             padding: 5px 5px ;
-            color: #ff0000;
+            color: #000000;
             text-align: center;
                 max-width: 95%;
             margin: auto;
@@ -48,7 +48,7 @@
 <script>
 
 quotes=[
-"Learning, like success, is anything but a linear process",
+"야야야야야이야ㅣ야ㅣ야ㅣ야ㅣ야ㅣ야ㅣ야이ㅑ이ㅑ이ㅑ이ㅑ이ㅑ이야ㅣㅇ",
 "I am in competition with no one. I have no desire to play the game of being better than anyone. I am simply trying to be better than the person I was yesterday.",
 "If you want to be interesting, you have to be interested.",
 "It's supposed to be hard. If it were easy, everyone would do it.",
