--- a/index.html
+++ b/index.html
@@ -48,19 +48,19 @@
 <script>
 
 quotes=[
-"야야야야야이야ㅣ야ㅣ야ㅣ야ㅣ야ㅣ야ㅣ야이ㅑ이ㅑ이ㅑ이ㅑ이ㅑ이야ㅣㅇ",
-"I am in competition with no one. I have no desire to play the game of being better than anyone. I am simply trying to be better than the person I was yesterday.",
-"If you want to be interesting, you have to be interested.",
-"It's supposed to be hard. If it were easy, everyone would do it.",
-"Don’t worry if you’re not where you want to be yet. Great things take time. ",
-"If it's important you'll find a way. If it's not, you'll find an excuse.",
-"Most people overestimate what they can do in one year and underestimate what they can do in ten years.",
-"A goal without a plan is just a wish.",
-"change your 24 hours and you'll change your life",
-"Stop thinking you are not qualified, not fit, or not experienced enough,",
-"Growth takes place when you start doing stuff you are not qualified to do.",
-"Be who you are and say what you feel, because those who mind don't matter, and those who matter don't mind.",
-"Twenty years from now you will be more disappointed by the things that you didn't do than by the ones you did do. So throw off the bowlines. Sail away from the safe harbor. Catch the trade winds in your sails. Explore. Dream. Discover.",
+"Notice : 서로의 이야기가 교차하는 정보 환승 플랫폼입니다.",
+"Notion Tips : 투명한 바탕에 테두리를 주고 싶다면 콜아웃을 생성한 다음 '색/기본'으로 설정하면 됩니다.",
+"Notice : 이 페이지는 사소하지만 분류하기 까다로운 정보들을 체계화 하고자 개설된 페이지입니다.",
+"Notion Tips : 수학공식 사용 단축키는 해당 문장을 '$$'로 감싸면 됩니다.",
+"Notice : 'Share Link' 플랫폼은 이 페이지를 개선하기 위한 Notion Custom 정보나 기타 공유하고 싶은 정보를 링크할 수 있습니다.",
+"Notion Tips : 만약 윈도우 어플리케이션을 사용할 경우 Ctrl + Shift + I를 누르면 개발자 모드 창이 뜹니다.",
+"Notice : 뭔가 페이지가 달라진 것 같나요? Patch Note를 통해 업데이트 내역을 살펴볼 수 있습니다.",
+"Notion Tips : 가로의 속성들에게 영역을 주고 싶다면 '인용' 기능을 사용해 선을 만들 수 있습니다(Shift + Enter).",
+"Notice : 'My Memo List'의 우측을 보시면 최근에 수정한 시간을 확인할 수 있습니다.",
+"Notion Tips : '임베딩'이라는 기능을 통해 Notion 외부의 기능을 Widget처럼 이용할 수 있습니다.",
+"Notice : 페이지 커버는 5mb 이하의 이미지나 영상을 업로드 할 수 있고 지금 커버로 사용 중인 gif 원작자는 lennart butz입니다.",
+"Notion Tips : 지금 보이시는 이 글은 GitHub에서 Html 문서로 작성해 임베딩한 내용입니다(public + main branch + Setting/Page/Link).",
+"Notice : 지금 누군가가 이곳에 있는 것 같나요? PC 버전에서는 우측 상단에 지금 누가 보고 있는지 실시간으로 확인할 수 있습니다.",
 ];
 
 const INTERVAL = 86400000;
